# grapho-trac

./: core.html  hello.py  index.html  index.html.md  pyproject.toml  search.json  sitemap.xml
.ipynb_checkpoints/: pyproject-checkpoint.toml
grapho_trac/: _modidx.py  core.py
nbdev3-template-0.0.2/: pyproject.toml
nbs/: 00_core.ipynb
