[project]
name = "grapho-trac"
version = "0.1.0"
description = "Toolkit for integrating trac service with GraphRAG and MCP"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = []

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "jupyterlab-quarto>=0.3.5",
    "nbdev>=3.0.12",
    "notebook>=7.5.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grapho_trac*"]
exclude = ["nbs*"]

[tool.nbdev]
repo = "grapho-trac"
branch = "main"
user = "michela"
author = "Michela Ledwidge"
author_email = "michela@mod.studio"
lib_name = "grapho_trac"
lib_path = "grapho_trac"
nbs_path = "nbs"
doc_path = "_docs"
